--- a/src/css/style.css
+++ b/src/css/style.css
@@ -221,7 +221,7 @@ button {
   }
   .cart-card {
     font-size: inherit;
-    grid-template-columns: 150px auto 15%;
+    grid-template-columns: 150px auto 15% 20px;
   }
 }
 
