--- a/src/css/style.css
+++ b/src/css/style.css
@@ -208,9 +208,16 @@ button {
   grid-column: 2;
 }
 
-.cart-card__quantity {
+.qty-label {
   grid-row: 1;
   grid-column: 3;
+}
+
+.qty-label input {
+  width: 100px;
+  font-size: 16px;
+  border: 2px solid gray;
+  border-radius: 5px;
 }
 
 .cart-card__price {
@@ -221,6 +228,7 @@ button {
 .cart-card__remove {
   text-align: center;
   cursor: pointer;
+  padding: 5px;
 }
 
 .cart-footer.hide {
